--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,15 @@
     
     <title>Image Uploader</title>
   </head>
-  <body class="container d-flex justify-content-center align-items-center vh-100">
+  <body class="d-flex justify-content-center align-items-center vh-100 vw-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
     <!-- bootstrap script  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- font awesome script  -->
+    <script src="https://kit.fontawesome.com/6036f5d002.js" crossorigin="anonymous"></script>
   </body>
 </html>
